# portefolio_project

./: .gitignore  PROMPT_audit_reorg.md  QGIS_PLUGIN.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  portfolio.yml
_data_center_sig/: DOC_UTILISATION.md  EXPLICATION_CODE.md
_data_center_sig/outil/: DONNEES_REELLES.md  adapter_donnees_reelles.py  analyse_reelle.py  config.py  generate_synthetic.py  pipeline.py  run.py  telecharge_arcep.py  telecharge_ebc.py  tests_pipeline.py
ecobuage/: PROMPT.md  README.md  ecobuage.py
paff/: interface_wui.md
scripts/: generate_stats.py
scrutech/: metadata.txt
scrutech/climate_risk_analyzer/: README.md
scrutech/climate_risk_analyzer/eudr_climate_risk_analyzer/: __init__.py  eudr_analyzer_dialog.py  eudr_analyzer_plugin.py  metadata.txt
scrutech/core/: README.md  cache_manager.py  pyproject.toml
scrutech/core/src/core/: __init__.py  aoi.py  constants.py  db.py  io.py  storage.py
scrutech/core/tests/: test_aoi.py  test_db.py  test_io.py  test_storage.py
scrutech/mini_dc/: ETUDE_ENEDIS_ZONES_CONTRAINTE_ENR.md
scrutech/mini_dc/outil/: telecharge_arcep.py
scrutech/paff/: README.md  architecture_3_sujets.md
scrutech/plugin/: PROMPT_extension_qgis.md  __init__.py  plugin.py  requirements.txt
scrutech/plugin/core/: auth_manager.py  cog_reader.py  h3_indexer.py  job_runner.py  stac_client.py
scrutech/plugin/processing/: atmospheric_correction.py  change_detection.py  indices.py
scrutech/plugin/tests/: test_auth_manager.py
scrutech/plugin/ui/: api_keys_dialog.py  job_monitor.py  preview_widget.py  search_panel.py
scrutech/processing/: inference.py
scrutech/sdbpi/: README.md  config.py  net.py  processing.py  requirements.txt  run_vacance.py
scrutech/storage/: DATA_INPUTS.md  download_aura.py  init_db.py  schema.sql
scrutech/tests/: test_cog_reader.py  test_stac_client.py
scrutech/vegevigie/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
scrutech/vegevigie/config/: default.yaml
scrutech/vegevigie/notebooks/: README.md
scrutech/vegevigie/qgis_plugin/: README.md  package.py
scrutech/vegevigie/qgis_plugin/scrutech/: __init__.py  metadata.txt  provider.py
scrutech/vegevigie/qgis_plugin/scrutech/algorithms/: __init__.py  _external.py  _icons.py  _qgis_compat.py  analyze_extent.py  ecobuage_aptitude.py  load_communes.py  mini_dc_sites.py  paf_interface.py  sdbpi_vacance.py
scrutech/vegevigie/scripts/: demo_dashboard_data.py  demo_drought.py  demo_ndvi_masking.py  demo_trend_map.py
scrutech/vegevigie/src/vegevigie/: __init__.py  aoi.py  cli.py  composite.py  config.py  indices.py  interface.py  pipeline.py  trend.py  zonal.py
scrutech/vegevigie/src/vegevigie/dashboard/: app.py
scrutech/vegevigie/tests/: test_aoi.py  test_catalog.py  test_cli.py  test_config.py  test_dashboard_data.py  test_drought.py  test_indices.py  test_trend.py  test_zonal.py
sdbpi/: naf_rev2_subclasses.json  sources.py
vegevigie/: .gitignore  CLAUDE.md  README.md  pyproject.toml
vegevigie/config/: default.yaml
vegevigie/docs/: glossary.md
vegevigie/qgis_plugin/: README.md  ROADMAP.md  package.py
vegevigie/qgis_plugin/scrutech/: dependencies.py  metadata.txt  protocol.py  provider.py  scrutech_plugin.py
vegevigie/qgis_plugin/scrutech/algorithms/: analyze_extent.py  base.py  build_composites.py  compute_drought.py  compute_trend.py  ecobuage_aptitude.py  load_communes.py  paf_interface.py  rank_zones.py  search_scenes.py  zonal_stats.py
vegevigie/qgis_plugin/scrutech/styles/: drought_anomaly.qml  drought_vci.qml  trend_class.qml  trend_sen_slope.qml  zonal_stats.qml
vegevigie/scripts/: demo_monthly_ndvi.py  demo_zonal_ranking.py
vegevigie/src/vegevigie/: catalog.py  cli.py  config.py  datacube.py  drought.py  pipeline.py  qgis_runner.py  stages.py  store.py  trend.py  zonal.py
vegevigie/src/vegevigie/dashboard/: __init__.py  data.py
vegevigie/tests/: test_cli.py  test_composite.py  test_config.py  test_datacube.py  test_interface.py  test_pipeline.py  test_qgis_runner.py  test_scrutech_protocol.py  test_stages.py  test_store.py
