[project]
name = "scrutech-core"
version = "0.1.0"
description = "ScruTech shared geodata core: AOI resolution and vector IO."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyarrow>=16.0",
    "requests>=2.32",
    # Central store (core.db) — DuckDB before PostGIS: one file, no server, spatial built in.
    "duckdb>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
python_version = "3.11"
packages = ["core"]
mypy_path = "src"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
